# video-shelf

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  main.py
app/api/: projects.py  routes.py
app/models/: schemas.py
app/services/: jobstore.py  projectstore.py  storage.py  video.py
app/workers/: celery_app.py  tasks.py
deploy/: deploy.sh  entrypoint.sh  supervisord.conf
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ExportPanel.tsx  ImageTimeline.tsx  OutputTimeline.tsx  ProjectList.tsx  SegmentList.tsx  Timeline.tsx  UploadZone.tsx  VideoList.tsx  VideoPlayer.tsx
frontend/src/hooks/: useAutoSave.ts  useJobProgress.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: videoColors.ts
scripts/: migrate_output_layout.py  migrate_redis_to_dynamodb.py
